add no changable height on hero section

--- a/src/components/hero/_style.scss
+++ b/src/components/hero/_style.scss
@@ -1,6 +1,6 @@
 .main.home-page {
   .hero {
-    height: 100dvh;
+    height: 100svh;
     position: relative;
     .mouse-movement {
       position: absolute;
