--- a/src/components/carousel/_home-style.scss
+++ b/src/components/carousel/_home-style.scss
@@ -4,6 +4,7 @@
     height: 100%;
     position: relative;
     overflow: hidden;
+    background-color: $black;
     &__item {
       width: 100%;
       height: 100%;
