--- a/src/site/main.css
+++ b/src/site/main.css
@@ -400,6 +400,7 @@ button {
   height: 100%;
   position: relative;
   overflow: hidden;
+  background-color: #000;
 }
 .main.home-page .carousel__item {
   width: 100%;
